python files merged

--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
-	{% include 'includes/nav.html' %}
+	{% include 'includes/_navbar.html' %}
 	<div class="container">	
-	{% include 'includes/message.html' %}	
+	
 	{% block body %}{% endblock %}
 	</div>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
