--- a/templates/student_track.html
+++ b/templates/student_track.html
@@ -1,6 +1,8 @@
-{% extends 'layout.html' %}
+{% extends 'layout1.html' %}
 
 {% block body %}
-  <h1>{{data['s1'].attendance  data['s2'].attendance  data['s3'].attendance}}</h1>
-  <h1>{{data['s1'].tot_att  data['s2'].tot_att  data['s3'].tot_att}}</h1>
+  <h1>{{data['s1'] }}</h1>
+  <h1>{{data['s2'] }}</h1>
+  <h1>{{data['s3'] }}</h1>
+  
 {% endblock %}
