--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layout1.html' %}
 
 {% block body %}
   <h1>Register</h1>
@@ -19,6 +19,22 @@
     <div class="form-group">
       {{render_field(form.confirm, class_="form-control")}}
     </div>
+    <div class="form-group">
+      {{render_field(form.class1, class_="form-control")}}
+    </div>
+    <div class="form-group">
+      {{render_field(form.class2, class_="form-control")}}
+    </div>
+    <div class="form-group">
+      {{render_field(form.class3, class_="form-control")}}
+    </div>
+    <div class="form-group">
+      {{render_field(form.c1, class_="form-control")}}
+    </div>
+    <div class="form-group">
+      {{render_field(form.c2, class_="form-control")}}
+    </div>
+    
     <p><input type="submit" class="btn btn-primary" value="Submit"></p>
   </form>
 {% endblock %}
